Jhonny/Prac_2/pra2.output
Gramática

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | exp '\n'

    5 exp: NUM
    6    | exp exp '+'
    7    | exp exp '-'
    8    | exp exp '*'
    9    | exp exp '/'
   10    | exp exp '^'
   11    | exp 'n'


Terminales con las reglas donde aparecen

    $end (0) 0
    '\n' (10) 3 4
    '*' (42) 8
    '+' (43) 6
    '-' (45) 7
    '/' (47) 9
    '^' (94) 10
    'n' (110) 11
    error (256)
    NUM (258) 5


No terminales con las reglas donde aparecen

    $accept (11)
        on left: 0
    input (12)
        on left: 1 2
        on right: 0 2
    line (13)
        on left: 3 4
        on right: 2
    exp (14)
        on left: 5 6 7 8 9 10 11
        on right: 4 6 7 8 9 10 11


Estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


Estado 1

    0 $accept: input . $end
    2 input: input . line

    $end  desplazar e ir al estado 2
    NUM   desplazar e ir al estado 3
    '\n'  desplazar e ir al estado 4

    line  ir al estado 5
    exp   ir al estado 6


Estado 2

    0 $accept: input $end .

    $default  aceptar


Estado 3

    5 exp: NUM .

    $default  reduce usando la regla 5 (exp)


Estado 4

    3 line: '\n' .

    $default  reduce usando la regla 3 (line)


Estado 5

    2 input: input line .

    $default  reduce usando la regla 2 (input)


Estado 6

    4 line: exp . '\n'
    6 exp: exp . exp '+'
    7    | exp . exp '-'
    8    | exp . exp '*'
    9    | exp . exp '/'
   10    | exp . exp '^'
   11    | exp . 'n'

    NUM   desplazar e ir al estado 3
    '\n'  desplazar e ir al estado 7
    'n'   desplazar e ir al estado 8

    exp  ir al estado 9


Estado 7

    4 line: exp '\n' .

    $default  reduce usando la regla 4 (line)


Estado 8

   11 exp: exp 'n' .

    $default  reduce usando la regla 11 (exp)


Estado 9

    6 exp: exp . exp '+'
    6    | exp exp . '+'
    7    | exp . exp '-'
    7    | exp exp . '-'
    8    | exp . exp '*'
    8    | exp exp . '*'
    9    | exp . exp '/'
    9    | exp exp . '/'
   10    | exp . exp '^'
   10    | exp exp . '^'
   11    | exp . 'n'

    NUM  desplazar e ir al estado 3
    '+'  desplazar e ir al estado 10
    '-'  desplazar e ir al estado 11
    '*'  desplazar e ir al estado 12
    '/'  desplazar e ir al estado 13
    '^'  desplazar e ir al estado 14
    'n'  desplazar e ir al estado 8

    exp  ir al estado 9


Estado 10

    6 exp: exp exp '+' .

    $default  reduce usando la regla 6 (exp)


Estado 11

    7 exp: exp exp '-' .

    $default  reduce usando la regla 7 (exp)


Estado 12

    8 exp: exp exp '*' .

    $default  reduce usando la regla 8 (exp)


Estado 13

    9 exp: exp exp '/' .

    $default  reduce usando la regla 9 (exp)


Estado 14

   10 exp: exp exp '^' .

    $default  reduce usando la regla 10 (exp)
